--- a/pfoliio/index.html
+++ b/pfoliio/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <title>portfolio</title>
-        <head>
+    </head>
 
             <body>
                 <h1>Hello, World!</h1>
-                <p>This is Vishnu</p>
+                <p>This is Gaadha</p>
 
             </body>
 </html>
