--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <html>
     <head>
-        <title>portfolio</title>
+        <title>Portfolio</title>
+        <link href='style.css' rel='stylesheet'>
+
     </head>
 
     <body>
-        <h1>HELLO!</h1>
-        <p>This is Gaadha</p>
+        <ul>
+            <li><a>HOME</a></li>
+            <li><a>ABOUT</a></li>
+            <li><a>CONTACT</a></li>
+
+        </ul>
+
+       <p>
+        <img src="/bg2.jpg" alt="image" height="48">
+       </p>
+
+       <h1>HELLO WORLD!</h1>
+       <p>THIS IS GAADHA"</p>
+
+        <p>
+        <a href="https://www.instagram.com/gaadha_pnath/" target="_blank" rel="nofollow">Click here for Instagram</a>
+        </p>
 
     </body>
     
