--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </ul>
 
        <p>
-        <img src="/bg2.jpg" alt="image" height="48">
+        <img src="/bg2.jpg" alt="image" height="250" width="300">
        </p>
 
        <h1>HELLO WORLD!</h1>
-       <p>THIS IS GAADHA"</p>
+       <p>THIS IS GAADHA</p>
 
         <p>
         <a href="https://www.instagram.com/gaadha_pnath/" target="_blank" rel="nofollow">Click here for Instagram</a>
